Wed Apr 14 15:58:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_string_value_cstr): make NUL terminated if it is
	  not done.

Wed Apr 14 12:56:21 2010  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap (encode_utf7): encode & properly.  Thanks, Kengo
	  Matsuyama.  [ruby-dev:38063]

Wed Apr 14 11:39:26 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/lib/syck/basenode.rb (Syck::BaseNode#match_path): fixed
	  library name.

	* ext/syck/lib/yaml/syck.rb: split from ext/syck/lib/syck.rb for
	  backward compatibility.

Wed Apr 14 09:24:07 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: Refix [nkf-bug:21393]. (explicit -X)

Tue Apr 13 20:36:50 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: Fix: Windows Codepages wrongly convert
	  Halfwidth Katakana. [nkf-bug:21393]

Tue Apr 13 15:00:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (make_seed_value): fix leading-zero-guard condition on
	  bdigit is smaller than 32bit.

Tue Apr 13 13:57:36 2010  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* lib/irb/completion.rb (CompletionProc): fix [ruby-dev:40953]
	  [Bug #3126]. Thanks Kazuhiro NISHIYAMA.

Tue Apr 13 09:32:12 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* transcode.c (transcode_loop): insert output the value when
	  fallback hash has a related key. [ruby-dev:40540]
	  [ruby-dev:40829] #3036

	* transcode.c (rb_econv_prepare_opts): pass to newhash
	  a value with the key :fallback.

Tue Apr 13 00:12:04 2010  Tanaka Akira  <akr@fsij.org>

	* random.c (rand_init): use the absolute value of seed to
	  make srand(-2**40) portable with 32bit and 64bit.
	  [ruby-core:29292](2)

Mon Apr 12 22:48:47 2010  Tanaka Akira  <akr@fsij.org>

	* enumerator.c (inspect_enumerator): don't raise for uninitialized
	  enumerator.

Mon Apr 12 21:47:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* LEGAL: separated the section for parse.c.  contributed by Paul
	  Betteridge in [ruby-core:29472].
